overflow fixed.

--- a/src/css/loading_prepare.scss
+++ b/src/css/loading_prepare.scss
@@ -6,7 +6,7 @@ html,
 body {
   height: 100%;
   width: 100%;
-  overflow: hidden;
+  //overflow: hidden;
   margin: 0;
 }
 
